# AI-project---IVF-

./: pyproject.toml  shared_links.txt
ivf_empaier/: README.md
ivf_empaier/src/ivf_empaier/: main.py
ivf_empaier/src/ivf_empaier/crews/dataanalyst_crew/: dataanalyst_crew.py
ivf_empaier/src/ivf_empaier/crews/datascientist_crew/: datascientist_crew.py
