[project]
name = "ivf_empaier"
version = "0.1.0"
description = "ivf_empaier using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.1.0"
]

[project.scripts]
kickoff = "ivf_empaier.main:kickoff"
run_crew = "ivf_empaier.main:kickoff"
plot = "ivf_empaier.main:plot"
run_with_trigger = "ivf_empaier.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
